# capt

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
app/api/: gemini.py
app/config/: database.py  default.py  schema.py
app/db/: db_helper.py  redis_helper.py
app/service/: capt.py  chat.py  llm.py
app/utils/: logger_factory.py  util.py
resources/prompts/: build_base.txt  build_natural.txt
resources/prompts/character/: base.txt  family.txt  friendly.txt  search.txt
scripts/: shutdown.sh  startup.sh  test_request_chat.py  test_request_dev_win.bat  test_request_linux.sh  test_request_prod_win.bat
